--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body class="index">
-	<div class="skip"><a href="#detHome">Skip to Main Content</a></div>
+	<div class="skip"><a class="skipLink" href="#detHome">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -62,7 +62,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<p>Josh Richman &copy; 2022</p>
+		<p tabindex="0">Josh Richman &copy; 2022</p>
 	</footer>
 </body>
 </html>
