--- a/lions.html
+++ b/lions.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+	<div class="skip"><a class="skipLink" href="#main">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -30,7 +30,9 @@
 		
 		<div class = "overview">
 			<h1 tabindex="0">Detroit Lions</h1>
-			<p tabindex="0">The Detroit Lions are a football team that play in the National Football League.</p>
+			<p tabindex="0">&emsp;The Detroit Lions are a football team that play in the National Football League.
+				 They joined the NFL in 1930, and have been in the NFC North since 2002.
+			</p>
 		</div>
 		
 		<div class="titles" id="division-title">
@@ -124,7 +126,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<p>Josh Richman &copy; 2022</p>
+		<p tabindex="0">Josh Richman &copy; 2022</p>
 	</footer>
 </body>
 </html>
