--- a/pistons.html
+++ b/pistons.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#pistonmain">Skip to Main Content</a></div>
+	<div class="skip"><a class="skipLink" href="#pistonmain">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -29,7 +29,9 @@
 	<main id = "pistonmain">
 		<div class = "overviewFlex" id="pistonHead">
 			<h1 tabindex="0">Detroit Pistons</h1>
-			<p tabindex="0">&emsp;The Pistons are a basketball team that play in the National Basketball Assocation. </p>
+			<p tabindex="0">&emsp;The Pistons are a basketball team that play in the National Basketball Assocation. 
+				They were founded in 1937 and have been the Detroit Pistons since 1957. They have won 3 National Championships.
+			</p>
 		</div>
 	<div class = "pistons">
 	<div class="container" id="DivCont">
@@ -78,7 +80,8 @@
 			<img tabindex="0" src="images/pistons/casey.jpg" alt=""/>
 			</div>
 			<div class="textboxFlex" id="coach-textFlex">
-			<p tabindex="0">Dwane Casey has been the head coach since 2018.</p>
+			<p tabindex="0">Dwane Casey has been the head coach since 2018. He has been coaching since 1979, 
+				and has been in the NBA as a coach since 1994.</p>
 			</div>
 		</div>
 	</div>
@@ -148,7 +151,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<p>Josh Richman &copy; 2022</p>
+		<p tabindex="0">Josh Richman &copy; 2022</p>
 	</footer>
 </body>
 </html>
