--- a/redWings.html
+++ b/redWings.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#redWingmain">Skip to Main Content</a></div>
+	<div class="skip"><a class="skipLink" href="#redWingmain">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -30,7 +30,10 @@
 		
 		<div class = "overviewFlex" id="redWingHead">
 			<h1 tabindex="0">Detroit Red Wings</h1>
-			<p tabindex="0">coach.</p>
+			<p tabindex="0">&emsp;The Red Wings are a Hockey team in the National Hockey League. 
+				They were founded in 1926 and have been known as the Red Wings since 1932. 
+				The Red Wings have won the Stanley Cup 11 times.
+			 </p>
 		</div>
 	<div class = "redWings">
 		<div class="container" id="DivCont">
@@ -57,7 +60,7 @@
 				<img tabindex="0" src="images/redWings/littleC.jpg" alt=""/>
 				</div>
 				<div class="textboxFlex" id="stadium-textFlex">
-				<p tabindex="0">The Red Wings play at Little Caesers Arena</p>
+				<p tabindex="0">The Red Wings play at Little Caesers Arena in Detroit, MI</p>
 				</div>
 			</div>
 			<div class="imgtext">
@@ -72,14 +75,14 @@
 		<div class="container" id="coachCont">
 			<div class="titlesFlex" id="coach-titleFlex">
 				<h2 tabindex="0">Coach</h2>
-				<p tabindex="0">Derek Lalonde </p>
+				<p tabindex="0">Derek Lalonde</p>
 			</div>
 			<div class="imgtext">
 				<div class="coachFlex imageFlex" id="coachFlex">
 				<img tabindex="0" src="images/redWings/lalonde.jpg" alt=""/>
 				</div>
 				<div class="textboxFlex" id="coach-textFlex">
-				<p tabindex="0">Derek Lalonde started coaching the Red Wings in 2022.</p>
+				<p tabindex="0">Derek Lalonde started coaching the Red Wings in June of 2022. He was an assistant coach for the Tampa Bay Lighting.</p>
 				</div>
 			</div>
 		</div>
@@ -116,7 +119,7 @@
 		<div class="container" id="hofCont">
 			<div class="titlesFlex" id="hofplayer-titleFlex">
 				<h2 tabindex="0">Hall of Fame Players</h2>
-				<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
+				<p tabindex="0">Gordie Howe (9,RW), Steve Yzerman (19,C), Nicklas Lidström (5,D)</p>
 			</div>
 		
 			<div class="imgtext">
@@ -124,7 +127,7 @@
 				<img tabindex="0" src="images/redWings/howe.jpg" alt=""/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
-				<p tabindex="0">Joe Dumars </p>
+				<p tabindex="0">Gordie Howe was a Right Wing. He played for the Red Wings from 1946 to 1971. He was inducted into the hall of fame in 1972. His nickname was Mr. Hockey.</p>
 				</div>
 			</div>
 			<div class="imgtext">
@@ -132,7 +135,7 @@
 				<img tabindex="0" src="images/redWings/steve.jpg" alt=""/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
-				<p tabindex="0">Isiah Thomas </p>
+				<p tabindex="0">Steve Yzerman was a Center. He played for the Red Wings from 1983 to 2006 and is now the Executive Vice President and General Manager of the Red Wings. He was inducted into the hall of fame in 2009</p>
 				</div>
 			</div>
 			<div class="imgtext">
@@ -140,7 +143,7 @@
 				<img tabindex="0" src="images/redWings/lidstrom.jpg" alt=""/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
-				<p tabindex="0">Ben Wallace</p>
+				<p tabindex="0">Nicklas Lidström was a Defenseman. He played for the Red Wings from 1991 to 2012. He was inducted into the hall of fame in 2015.</p>
 				</div>
 			</div>
 		</div>
@@ -149,7 +152,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<p>Josh Richman &copy; 2022</p>
+		<p tabindex="0">Josh Richman &copy; 2022</p>
 	</footer>
 </body>
 </html>
