--- a/tigers.html
+++ b/tigers.html
@@ -11,7 +11,7 @@
 
 <!-- All of the visible code in the page belongs in the body tag -->
 <body>
-	<div class="skip"><a href="#main">Skip to Main Content</a></div>
+	<div class="skip"><a class="skipLink" href="#main">Skip to Main Content</a></div>
 	<header>
 		<nav>
 			<ul class = "nav_links">
@@ -30,7 +30,9 @@
 
 		<div class = "overview">
 			<h1 tabindex="0">Detroit Tigers</h1>
-			<p tabindex="0">The tigers...</p>
+			<p tabindex="0">&emsp;The Tigers are a baseball team in the Major Leagues (MLB). 
+				They were founded in 1894, making them the oldest single name team in the American League.
+				 They have won 4 World Series.</p>
 		</div>
 	
 		<div class="titles tigTitles" id="division-title">
@@ -122,7 +124,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<p>Josh Richman &copy; 2022</p>
+		<p tabindex="0">Josh Richman &copy; 2022</p>
 	</footer>
 </body>
 </html>
