--- a/lions.html
+++ b/lions.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/lions/lions.jpg" class="logo" alt=""/></li>
+				<li><img src="images/lions/lions.jpg" class="logo" alt="Detroit Lions Logo."/></li>
 				<li><a href = "index.html" >Detroit Sports</a></li>
 				<li class="active"><a href = "lions.html">Detroit Lions</a></li> 
 				<li><a href = "pistons.html">Detroit Pistons</a></li>
@@ -40,7 +40,7 @@
 			<p tabindex="0">NFC North</p>
 		</div>
 		<div class="division image" id="division">
-			<img tabindex="0" src="images/lions/nfc-logo.png" alt=""/>
+			<img tabindex="0" src="images/lions/nfc-logo.png" alt="NFC Logo."/>
 		</div>
 		<div class="textbox" id="division-text">
 			<p tabindex="0">The Lions are in the NFC North division</p>
@@ -51,13 +51,13 @@
 			<p tabindex="0">Ford Field (current), Silverdome (old)</p>
 		</div>
 		<div class="stadium image" id="stadium">
-			<img tabindex="0" src="images/lions/fordField.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/fordField.jpg" alt="Inside Ford Field with crowd."/>
 		</div>
 		<div class="textbox" id="stadium-text">
 			<p tabindex="0">The Lions play at Ford Field in Detroit, MI</p>
 		</div>
 		<div class="stadium image" id="old-stadium">
-			<img tabindex="0" src="images/lions/silverdome.webp" alt=""/>
+			<img tabindex="0" src="images/lions/silverdome.webp" alt="Old image of Silverdome with large crowd."/>
 		</div>
 		<div class="textbox" id="old-stadium-text">
 			<p tabindex="0">The Lions used to play at the Silverdome in Pontiac, MI</p>
@@ -68,7 +68,7 @@
 			<p tabindex="0">Dan Campbell</p>
 		</div>
 		<div class="coach image" id="coach">
-			<img tabindex="0" src="images/lions/campbell.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/campbell.jpg" alt="Dan Campbell in a lions jersey."/>
 		</div>
 		<div class="textbox" id="coach-text">
 			<p tabindex="0">Dan Campbell is the head coach for the Lions and has been since 2021. He eats knee caps. He also played for the lions from 2006 to 2008.</p>
@@ -79,19 +79,19 @@
 			<p tabindex="0">Amon-Ra St.Brown (WR,14), Jamaal Williams (RB,30), Aidan Hutchinson (DE,97)</p>
 		</div>
 		<div class="player image" id="player1">
-			<img tabindex="0" src="images/lions/st.brown.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/st.brown.jpg" alt="Amon-Ra St. Brown catching a touchdown pass above a defender."/>
 		</div>
 		<div class="player-text textbox" id="player1-text">
 			<p tabindex="0">Amon-Ra St. Brown is a wide receiver for the Lions. He is their leading receiever for the 2022 Season.</p>
 		</div>
 		<div class="player image" id="player2">
-			<img tabindex="0" src="images/lions/jamaal-williams.webp" alt=""/>
+			<img tabindex="0" src="images/lions/jamaal-williams.webp" alt="Jamaal Williams pointing towards the endzone after getting a first down."/>
 		</div>
 		<div class="player-text textbox" id="player2-text">
 			<p tabindex="0">Jamaal Williams is a running back for the lions. He used to play for the Green Bay Packers.</p>
 		</div>
 		<div class="player image" id="player3">
-			<img tabindex="0" src="images/lions/hutchinson.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/hutchinson.jpg" alt="Aidan Hutchinson celebrating an interception with teammates behind him."/>
 		</div>
 		<div class="player-text textbox" id="player3-text">
 			<p tabindex="0">Aidan Hutchinson is a Defensive End for the lions. He played College Football at the University of Michigan.</p>
@@ -102,19 +102,19 @@
 			<p tabindex="0">Calvin Johnson (WR,81), Barry Sanders (RB,20), Joe Schmidt (MLB,56)</p>
 		</div>
 		<div class="hofplayer image" id="hofplayer1">
-			<img src="images/lions/megatron.jpg" alt=""/>
+			<img src="images/lions/megatron.jpg" alt="Calvin Johnson jumping in the air to catch a pass close to the endzone."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer1-text">
 			<p tabindex="0">Calvin Johnson, also known as Megatron, was a wide receiver for the Lions from 2007 to 2015. He was elected into the hall of fame in 2021.</p>
 		</div>
 		<div class="hofplayer image" id="hofplayer2">
-			<img tabindex="0" src="images/lions/sanders.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/sanders.jpg" alt="Barry Sanders jumping over and stiff arming a Bears defender."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer2-text">
 			<p tabindex="0">Barry Sanders was a running back for the lions from 1989 to 1998. He was elected into the hall of fame in 2004. He led the NFL in rushing yards 4 times in his 10 season career.</p>
 		</div>
 		<div class="hofplayer image" id="hofplayer3">
-			<img tabindex="0" src="images/lions/schmidt.jpg" alt=""/>
+			<img tabindex="0" src="images/lions/schmidt.jpg" alt="Joe Schmidt running towards the photagrapher in football gear."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer3-text">
 			<p tabindex="0">Joe Schmidt was a middle linebacker for the lions from 1953 to 1965. He was elected to the hall of fame in 1973. He led the lions to a NFL championship in 1957, and coached for the lions from 1967 to 1972.</p>
