--- a/pistons.html
+++ b/pistons.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/pistons/logo.png" class="logo" alt=""/></li>
+				<li><img src="images/pistons/logo.png" class="logo" alt="Detroit Pistons Logo."/></li>
 				<li><a href = "index.html" >Detroit Sports</a></li>
 				<li><a href = "lions.html">Detroit Lions</a></li> 
 				<li class="active"><a href = "pistons.html">Detroit Pistons</a></li> <!--active-->
@@ -41,7 +41,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="divisionFlex imageFlex" id="divisionFlex">
-			<img tabindex="0" src="images/pistons/centralDiv.png" alt=""/>
+			<img tabindex="0" src="images/pistons/centralDiv.png" alt="NBA Central Division teams."/>
 			</div>
 			<div class="textboxFlex" id="division-textFlex">
 			<p tabindex="0">The Pistons are in the Central division in the Eastern Conference</p>
@@ -55,7 +55,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="stadiumFlex imageFlex" id="stadiumFlex">
-			<img tabindex="0" src="images/pistons/littleC.jpg" alt=""/>
+			<img tabindex="0" src="images/pistons/littleC.jpg" alt="Little Ceasers Arena during a basketball game."/>
 			</div>
 			<div class="textboxFlex" id="stadium-textFlex">
 			<p tabindex="0">The Pistons play at Little Caesers Arena</p>
@@ -63,7 +63,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="old-stadiumFlex imageFlex" id="old-stadiumFlex">
-			<img tabindex="0" src="images/pistons/palace.jpg" alt=""/>
+			<img tabindex="0" src="images/pistons/palace.jpg" alt="The Palace during a basketball game."/>
 			</div>
 			<div class="textboxFlex" id="old-stadium-textFlex">
 			<p tabindex="0">The Pistons used to play at The Palace in Auburn Hills. MI from 1988 to 2017.</p>
@@ -77,7 +77,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="coachFlex imageFlex" id="coachFlex">
-			<img tabindex="0" src="images/pistons/casey.jpg" alt=""/>
+			<img tabindex="0" src="images/pistons/casey.jpg" alt="Dwane Casey talking in an interview."/>
 			</div>
 			<div class="textboxFlex" id="coach-textFlex">
 			<p tabindex="0">Dwane Casey has been the head coach since 2018. He has been coaching since 1979, 
@@ -92,7 +92,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="playerFlex imageFlex" id="player1Flex">
-				<img tabindex="0" src="images/pistons/ivey.jpg" alt=""/>
+				<img tabindex="0" src="images/pistons/ivey.jpg" alt="Jaden Ivey shooting a basket."/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player1-textFlex">
 				<p tabindex="0">Jaden Ivey is a Shooting Guard. He played College basketball at Purdue and was drafted 5th overall in 2022</p>
@@ -100,7 +100,7 @@
 		</div>
 	<div class="imgtext">
 		<div class="playerFlex imageFlex" id="player2Flex">
-			<img tabindex="0" src="images/pistons/cunningham.webp" alt=""/>
+			<img tabindex="0" src="images/pistons/cunningham.webp" alt="Cade Cunningham shooting a three pointer over a defender."/>
 		</div>
 		<div class="player-textFlex textboxFlex" id="player2-textFlex">
 			<p tabindex="0">Cade Cunningham is a Point Guard and Shooting Guard. He was drafted first overall in 2021.</p>
@@ -108,7 +108,7 @@
 	</div>
 	<div class="imgtext">
 		<div class="playerFlex imageFlex" id="player3Flex">
-			<img tabindex="0" src="images/pistons/bojan.jpg" alt=""/>
+			<img tabindex="0" src="images/pistons/bojan.jpg" alt="Bojan Bogdanović getting ready to take a shot."/>
 		</div>
 		<div class="player-textFlex textboxFlex" id="player3-textFlex">
 			<p tabindex="0">Bojan Bogdanović is a Small Forward. He plays for the Croation National Team.</p>
@@ -123,7 +123,7 @@
 	
 		<div class="imgtext">
 			<div class="hofplayerFlex imageFlex" id="hofplayer1Flex">
-			<img tabindex="0" src="images/pistons/dumars.webp" alt=""/>
+			<img tabindex="0" src="images/pistons/dumars.webp" alt="Joe Dumars dribbling down the court."/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
 			<p tabindex="0">Joe Dumars was a Shooting Guard and Point Guard. He played from 1985 to 1999 with the Pistons. He was inducted into the hall of fame in 2006.</p>
@@ -131,7 +131,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="hofplayerFlex imageFlex" id="hofplayer2Flex">
-			<img tabindex="0" src="images/pistons/isiah.webp" alt=""/>
+			<img tabindex="0" src="images/pistons/isiah.webp" alt="Isiah Thomas dribbling and calling a play."/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
 			<p tabindex="0">Isiah Thomas was a Point Guard. He played for Detroit from 1981 to 1994 and was inducted into the hall of fame in 2005.</p>
@@ -139,7 +139,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="hofplayerFlex imageFlex" id="hofplayer3Flex">
-			<img tabindex="0" src="images/pistons/wallace.jpg" alt=""/>
+			<img tabindex="0" src="images/pistons/wallace.jpg" alt="Ben Wallace going for a layup over a Miami defender."/>
 			</div>
 			<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
 			<p tabindex="0">Ben Wallace was a Center and Power Forward that went undrafted and ended up in the Hall of Fame. He played for Detroit from 2000 to 2006 and 2009 to 2012. He was inducted into the hall of fame in 2021.</p>
