--- a/redWings.html
+++ b/redWings.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/redWings/logo.png" class="logo" alt=""/></li>
+				<li><img src="images/redWings/logo.png" class="logo" alt="Red Wings Logo."/></li>
 				<li><a href = "index.html" >Detroit Sports</a></li>
 				<li><a href = "lions.html">Detroit Lions</a></li> 
 				<li><a href = "pistons.html">Detroit Pistons</a></li> 
@@ -43,7 +43,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="divisionFlex imageFlex" id="divisionFlex">
-				<img tabindex="0" src="images/redWings/wingsDiv.png" alt=""/>
+				<img tabindex="0" src="images/redWings/wingsDiv.png" alt="NHL Atlantic Division Logo."/>
 				</div>
 				<div class="textboxFlex" id="division-textFlex">
 				<p tabindex="0">The Red Wings are in the Atlantic division in the Eastern Conference.</p>
@@ -53,11 +53,11 @@
 		<div class="container" id="stadCont">
 			<div class="titlesFlex" id="stadium-titleFlex">
 				<h2 tabindex="0">Stadiums</h2>
-				<p tabindex="0">Little Ceasers Arena (current), Joe Louis Arena (old)</p>
+				<p tabindex="0">Little Caesers Arena (current), Joe Louis Arena (old)</p>
 			</div>
 			<div class="imgtext">
 				<div class="stadiumFlex imageFlex" id="stadiumFlex">
-				<img tabindex="0" src="images/redWings/littleC.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/littleC.jpg" alt="Little Caesers Arena during a hockey game."/>
 				</div>
 				<div class="textboxFlex" id="stadium-textFlex">
 				<p tabindex="0">The Red Wings play at Little Caesers Arena in Detroit, MI</p>
@@ -65,7 +65,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="old-stadiumFlex imageFlex" id="old-stadiumFlex">
-				<img tabindex="0" src="images/redWings/joeL.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/joeL.jpg" alt="Joe Louis Arena during a hockey game."/>
 				</div>
 				<div class="textboxFlex" id="old-stadium-textFlex">
 				<p tabindex="0">The Red Wings used to play at Joe Louis Arena in Detroit, MI from 1979 to 2017.</p>
@@ -79,7 +79,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="coachFlex imageFlex" id="coachFlex">
-				<img tabindex="0" src="images/redWings/lalonde.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/lalonde.jpg" alt="Derek Lolande coaching during a game."/>
 				</div>
 				<div class="textboxFlex" id="coach-textFlex">
 				<p tabindex="0">Derek Lalonde started coaching the Red Wings in June of 2022. He was an assistant coach for the Tampa Bay Lighting.</p>
@@ -93,7 +93,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="playerFlex imageFlex" id="player1Flex">
-					<img tabindex="0" src="images/redWings/larkin.jpg" alt=""/>
+					<img tabindex="0" src="images/redWings/larkin.jpg" alt="Dylan Larkin celebrating a goal."/>
 				</div>
 				<div class="player-textFlex textboxFlex" id="player1-textFlex">
 					<p tabindex="0">Dylan Larkin is the Center and Captain of the Red Wings.</p>
@@ -101,7 +101,7 @@
 			</div>
 		<div class="imgtext">
 			<div class="playerFlex imageFlex" id="player2Flex">
-				<img tabindex="0" src="images/redWings/husso.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/husso.jpg" alt="Ville Husso saving a goal."/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player2-textFlex">
 				<p tabindex="0">Ville Husso is a Goalkeeper for the Red Wings.</p>
@@ -109,7 +109,7 @@
 		</div>
 		<div class="imgtext">
 			<div class="playerFlex imageFlex" id="player3Flex">
-				<img tabindex="0" src="images/redWings/Kubalik.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/Kubalik.jpg" alt="Dominic Kubalik taking a slap shot at the Anaheim Ducks goal."/>
 			</div>
 			<div class="player-textFlex textboxFlex" id="player3-textFlex">
 				<p tabindex="0">Dominic Kubalik is a Forward for the Red Wings</p>
@@ -124,7 +124,7 @@
 		
 			<div class="imgtext">
 				<div class="hofplayerFlex imageFlex" id="hofplayer1Flex">
-				<img tabindex="0" src="images/redWings/howe.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/howe.jpg" alt="Gordie Howe skating behind the net without a helmet."/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer1-textFlex">
 				<p tabindex="0">Gordie Howe was a Right Wing. He played for the Red Wings from 1946 to 1971. He was inducted into the hall of fame in 1972. His nickname was Mr. Hockey.</p>
@@ -132,7 +132,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="hofplayerFlex imageFlex" id="hofplayer2Flex">
-				<img tabindex="0" src="images/redWings/steve.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/steve.jpg" alt="Steve Yzerman holding the Stanley Cup over his head in celebration."/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer2-textFlex">
 				<p tabindex="0">Steve Yzerman was a Center. He played for the Red Wings from 1983 to 2006 and is now the Executive Vice President and General Manager of the Red Wings. He was inducted into the hall of fame in 2009</p>
@@ -140,7 +140,7 @@
 			</div>
 			<div class="imgtext">
 				<div class="hofplayerFlex imageFlex" id="hofplayer3Flex">
-				<img tabindex="0" src="images/redWings/lidstrom.jpg" alt=""/>
+				<img tabindex="0" src="images/redWings/lidstrom.jpg" alt="Nicklas Lidström skating and looking for a pass."/>
 				</div>
 				<div class="hofplayer-textFlex textboxFlex" id="hofplayer3-textFlex">
 				<p tabindex="0">Nicklas Lidström was a Defenseman. He played for the Red Wings from 1991 to 2012. He was inducted into the hall of fame in 2015.</p>
