--- a/tigers.html
+++ b/tigers.html
@@ -16,7 +16,7 @@
 		<nav>
 			<ul class = "nav_links">
 				<!-- Since I am on the index file I added class = action to the link to index. -->
-				<li><img src="images/tigers/logo.png" class="logo" alt=""/></li>
+				<li><img src="images/tigers/logo.png" class="logo" alt="Detroit Tigers Logo."/></li>
 				<li><a href = "index.html" >Detroit Sports</a></li>
 				<li><a href = "lions.html">Detroit Lions</a></li> 
 				<li><a href = "pistons.html">Detroit Pistons</a></li> 
@@ -40,7 +40,7 @@
 			<p tabindex="0">AL East</p>
 		</div>
 		<div class="division image" id="division">
-			<img tabindex="0" src="images/tigers/alcentral.png" alt=""/>
+			<img tabindex="0" src="images/tigers/alcentral.png" alt="MLB American League Central Division Logo."/>
 		</div>
 		<div class="textbox" id="division-text">
 			<p tabindex="0">The Tigers are in the AL Central division.</p>
@@ -51,13 +51,13 @@
 			<p tabindex="0">Comerica Park (current), Tiger Stadium (old)</p>
 		</div>
 		<div class="stadium image" id="stadium">
-			<img tabindex="0" src="images/tigers/comerica.webp" alt=""/>
+			<img tabindex="0" src="images/tigers/comerica.webp" alt="Comerica Park with a large American flag on the field during the national anthem."/>
 		</div>
 		<div class="textbox" id="stadium-text">
 			<p tabindex="0">The Tigers play at Comerica Park in Detroit, MI.</p>
 		</div>
 		<div class="stadium image" id="old-stadium">
-			<img tabindex="0" src="images/tigers/oldtiger.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/oldtiger.jpg" alt="Tiger Stadium during a game."/>
 		</div>
 		<div class="textbox" id="old-stadium-text">
 			<p tabindex="0">The Tigers used to play at Tiger Stadium in Detroit, MI, from 1912 to 1999.</p>
@@ -68,7 +68,7 @@
 			<p tabindex="0">A.J. Hinch</p>
 		</div>
 		<div class="coach image" id="coach">
-			<img tabindex="0" src="images/tigers/hinch.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/hinch.jpg" alt="A.J Hinch watching a game."/>
 		</div>
 		<div class="textbox" id="coach-text">
 			<p tabindex="0">A.J. Hinch has been the manager for the Tigers since after the 2020 season.</p>
@@ -79,19 +79,19 @@
 			<p tabindex="0">Miguel Cabrera (24,1B/DH), Riley Greene (31,CF), Javier Báez (28,SS)</p>
 		</div>
 		<div class="player image" id="player1">
-			<img tabindex="0" src="images/tigers/cabrera.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/cabrera.jpg" alt="Miguel Cabrera at the end of swinging the bat."/>
 		</div>
 		<div class="player-text textbox" id="player1-text">
 			<p tabindex="0">Miguel Cabrera is a first baseman and Designated Hitter. He has over 500 homeruns in his career.</p>
 		</div>
 		<div class="player image" id="player2">
-			<img tabindex="0" src="images/tigers/greene.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/greene.jpg" alt="Riley Greene diving for a catch in the outfield."/>
 		</div>
 		<div class="player-text textbox" id="player2-text">
 			<p tabindex="0">Riley Greene is an outfielder. He was the 5th overall pick in the 2019 MLB draft.</p>
 		</div>
 		<div class="player image" id="player3">
-			<img tabindex="0" src="images/tigers/javier.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/javier.jpg" alt="Javier Báez celebrating a home run"/>
 		</div>
 		<div class="player-text textbox" id="player3-text">
 			<p tabindex="0">Javier Báez is a shortstop. He used to play for the Chicago Cubs.</p>
@@ -102,22 +102,22 @@
 			<p tabindex="0">Ty Cobb (NA/CF), Hal NewHouser (16/P), Alan Trammell (3,SS) </p>
 		</div>
 		<div class="hofplayer image" id="hofplayer1">
-			<img tabindex="0" src="images/tigers/cobb.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/cobb.jpg" alt="Ty Cobb running the bases."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer1-text">
-			<p tabindex="0">Ty Cobb was a centerfielder that played for detroit from 1905 to 1928, </p>
+			<p tabindex="0">Tyrus "Ty" Cobb was a centerfielder that played for detroit from 1905 to 1928. He was inducted into the hall of fame in 1936.</p>
 		</div>
 		<div class="hofplayer image" id="hofplayer2">
-			<img tabindex="0" src="images/tigers/newhouser.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/newhouser.jpg" alt="Hal Newhouser throwing a pitch."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer2-text">
-			<p tabindex="0">Hal Newhouser</p>
+			<p tabindex="0">Hal Newhouser was a left handed Pitcher for Detroit from 1939 to 1953. He was inducted into the hall of fame in 1992</p>
 		</div>
 		<div class="hofplayer image" id="hofplayer3">
-			<img tabindex="0" src="images/tigers/trammell.jpg" alt=""/>
+			<img tabindex="0" src="images/tigers/trammell.jpg" alt="Alan Trammell jumping over a diving base runner while looking for the ball."/>
 		</div>
 		<div class="hofplayer-text textbox" id="hofplayer3-text">
-			<p tabindex="0">Alan Trammell</p>
+			<p tabindex="0">Alan Trammell was a Short Stop for the Tigers from 1977 to 1996. He was inducted into the hall of fame in 2018.</p>
 		</div>
 
 	</main>
